--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/cli": "~13.2.4",
     "@angular/compiler-cli": "~13.2.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "typescript": "~4.5.2"
   }
 }
